# school_21

./: .gitignore  README.md
C/C2_s21_stringplus-2/src/: Makefile  my.check  s21_errors.h  s21_sprintf.c  s21_sprintf.h  s21_sscanf.c  s21_sscanf.h  s21_string.c  s21_string.h
C/C3_SimpleBashUtils-3/src/cat/: Makefile  diffcat.sh  s21_cat.c  s21_cat.h
C/C3_SimpleBashUtils-3/src/grep/: Makefile  diffgrep.sh  s21_grep  s21_grep.c  s21_grep.h
C/C6_s21_matrix-2/src/: Makefile  coverage  coverage.info  matrix_test.c  matrix_test.gcda  matrix_test.gcno  s21_matrix.c  s21_matrix.gcda  s21_matrix.gcno  s21_matrix.h
C/C6_s21_matrix-2/src/gcov_report/: index-sort-f.html  index-sort-l.html  index.html
C/C7_SmartCalc_v1.0-1/src/: Doxyfile  Makefile  README.md
C/C7_SmartCalc_v1.0-1/src/backend/: calc.c  parser.c  stack.c
C/C7_SmartCalc_v1.0-1/src/tests/: tests.c  tests.h
C/C7_SmartCalc_v1.0-1/src/ui/: CMakeLists.txt  calc.cpp  calc.h  calc.ui  graph.cpp  graph.h  graph.ui  main.cpp
Linux/D01_Linux-1/materials/: topics-list_RUS.md
Linux/D01_Linux-1/src/: report.md
Linux/DO2_LinuxNetwork-1/src/: report.md
c++/CPP1_s21_matrixplus-1/src/: s21_matrix_oop.cpp  tests.cpp
c++/CPP1_s21_matrixplus-2/src/: Makefile  s21_matrix_oop.cpp  s21_matrix_oop.h
c++/matrix.cpp/: Makefile  README.md  s21_matrix_oop.cpp  s21_matrix_oop.h  tests.cpp
sql/SQL_beginner.Day00-1/src/ex00/: day00_ex00.sql
sql/SQL_beginner.Day00-1/src/ex01/: day00_ex01.sql
sql/SQL_beginner.Day00-1/src/ex02/: day00_ex02.sql
sql/SQL_beginner.Day00-1/src/ex03/: day00_ex03.sql
sql/SQL_beginner.Day00-1/src/ex04/: day00_ex04.sql
sql/SQL_beginner.Day00-1/src/ex05/: day00_ex05.sql
sql/SQL_beginner.Day00-1/src/ex06/: day00_ex06.sql
sql/SQL_beginner.Day00-1/src/ex07/: day00_ex07.sql
sql/SQL_beginner.Day00-1/src/ex09/: day00_ex09.sql
sql/SQL_beginner.Day01-1/: README.md
sql/SQL_beginner.Day01-1/src/ex00/: day01_ex00.sql
sql/SQL_beginner.Day01-1/src/ex04/: day01_ex04.sql
sql/SQL_beginner.Day01-1/src/ex05/: day01_ex05.sql
sql/SQL_beginner.Day01-1/src/ex09/: day01_ex09.sql
sql/SQL_beginner.Day01-1/src/ex10/: day01_ex10.sql
sql/SQL_beginner.Day02-1/src/ex00/: day02_ex00.sql
sql/SQL_beginner.Day02-1/src/ex03/: day02_ex03.sql
sql/SQL_beginner.Day02-1/src/ex06/: day02_ex06.sql
sql/SQL_beginner.Day02-1/src/ex07/: day02_ex07.sql
sql/SQL_beginner.Day02-1/src/ex08/: day02_ex08.sql
sql/SQL_beginner.Day03-1/: README.md
sql/SQL_beginner.Day03-1/src/ex03/: day03_ex03.sql
(+91 files in other folders)
